Update unanswered probs

--- a/images/0034-eq.tex
+++ b/images/0034-eq.tex
@@ -4,6 +4,7 @@
   \tkzFillPolygon[cyan!20](B,E,F)
   \tkzDrawPolygon(A,B,C)
   \tkzDrawSegments(B,D A,F)
+  \tkzDrawSegment[dashed](D,F)
   \tkzMarkSegments[mark=|,color=teal](B,E D,E)
   \tkzDrawPoints(A,B,C,D,E,F)
   \tkzLabelPoints[above](A)
