--- a/probs/00B4.tex
+++ b/probs/00B4.tex
@@ -40,7 +40,7 @@
   由于$AB$切小圆于$C$，故
   \[ O_2C \perp AB, MN \perp AB \Rightarrow O_2C \parallel MN \]
   故$\angle MO_1S = \angle CO_2S$，圆心角相等，故易得$\angle O_1SC = \angle O_1SM$，于是$S, C, M$共线。因此易有
-  \[ \angle CMN = \angle C'CS \Rightarrow \rttri CMN \cong \rttri C'CS \]
+  \[ \angle CMN = \angle C'CS \Rightarrow \rttri CMN \sim \rttri C'CS \]
   因此
   \[ \frac{MN}{MC} = \frac{SC}{CC'} \Rightarrow CC' \cdot MN = MC \cdot SC \]
   而由相交弦定理知$MC\cdot SC = AC\cdot BC$，故
