--- a/covers/0080-00BF.tex
+++ b/covers/0080-00BF.tex
@@ -34,7 +34,7 @@
       \begin{minipage}{6cm}
         \footnotesize \textit{——最简洁的命题，最复杂的证明}
       \end{minipage} };
-    \begin{scope}[shift={(12.5,13)}, scale=1.35, very thick]
+    \begin{scope}[shift={(12.5,13)}, scale=1.35]
       \tkzDefPoints{-1/0/A,1/0/B,-6/1.6/A_1,1.4/-3.1/B_1,1.3/5.6/C_1}
       \tkzDefTriangle(A,B)     \tkzGetPoint{C}
       \tkzDefTriangle(A,A_1)   \tkzGetPoint{A_2}
