add 00BA, 00BB; avoid sfrac

--- a/probs/0081.tex
+++ b/probs/0081.tex
@@ -10,4 +10,4 @@
 
 \subsection{反证法}
 
-不妨假设$\gcd\{a_k\}$与$\lcm\{b_k\}$不互质，它们有质数$p$作为公因数。于是$p$是所有分子的因数，且易知所有分母中必然至少有一个有因数$p$，设其为$b_i$。于是$b_i$有因数$p$，$a_i$亦有因数$p$，故$\sfrac{a_i}{b_i}$不既约，与题目条件相悖，故原假设不成立。证毕。
+不妨假设$\gcd\{a_k\}$与$\lcm\{b_k\}$不互质，它们有质数$p$作为公因数。于是$p$是所有分子的因数，且易知所有分母中必然至少有一个有因数$p$，设其为$b_i$。于是$b_i$有因数$p$，$a_i$亦有因数$p$，故$a_i/b_i$不既约，与题目条件相悖，故原假设不成立。证毕。
