--- a/probs/0083.tex
+++ b/probs/0083.tex
@@ -20,7 +20,7 @@
 \end{align*}
 它们的系数互质，设它们的系数为$b'', c''$。令$d = d_gd_h, m = m_gm_h$，于是有
 \[ f(x) = g(x)h(x) = \frac dmg''(x)h''(x) \]
-有理数$\sfrac dm$可能不是既约的，约去后得既约的$\sfrac {d'}{m'}$，即
+有理数$d/m$可能不是既约的，约去后得既约的$d'/m'$，即
 \[ m'f(x) = d'g''(x)h''(x) \]
 
 若$m' = 1$，则$f(x)$可以表示为两整系数多项式的乘积，命题得证；若$m' \ne 1$，则其有质因数$p$，故等号右边亦有质因数$p$。而$d'$与$m'$互质，故其无质因数$p$，故$p$整除$g''(x)h''(x)$的每一项系数。
