--- a/probs/0089.tex
+++ b/probs/0089.tex
@@ -12,7 +12,7 @@
 
 \subsection{二进制}
 
-若每次所欠钱数改变后，亦改变$x$，则步骤可以写成：在第$n - 1$次掷硬币后，若为正面，则拥有硬币的人获得硬币，结束；若为反面，则$x \leftarrow 2x$，若$x > \sfrac12$，则交换硬币，同时$x \leftarrow 1 - x$。
+若每次所欠钱数改变后，亦改变$x$，则步骤可以写成：在第$n - 1$次掷硬币后，若为正面，则拥有硬币的人获得硬币，结束；若为反面，则$x \leftarrow 2x$，若$x > 1/2$，则交换硬币，同时$x \leftarrow 1 - x$。
 
 将$x$写为二进制数，即将其表示为
 \[ x = 2^{-1}x_1 + 2^{-2}x_2 + 2^{-3}x_3 + 2^{-4}x_4 + \cdots \]
@@ -20,9 +20,9 @@
 
 将$x$加倍1次，相当于将$x$的二进制表示左移1位，此时
 \[ x \leftarrow 2x = 2^{-1}x_2 + 2^{-2}x_3 + 2^{-3}x_4 + \cdots \]
-而且进行此操作时$x \le \sfrac12$，即$x_1 = 0$，故可省略。继续可以推知，$x$加倍$n - 1$次，其间又交换硬币多次后，
+而且进行此操作时$x \le 1/2$，即$x_1 = 0$，故可省略。继续可以推知，$x$加倍$n - 1$次，其间又交换硬币多次后，
 \[ x = 2^{-1}x_n + 2^{-2}x_{n + 1} + 2^{-3}x_{n + 2} + 2^{-4}x_{n + 3} + \cdots \]
-此时若$x_n = 1$，则$x > \sfrac12$。而操作$x \leftarrow 1 - x$可以表示为对于所有的$i$，$x_i \leftarrow 1 - x_i$，这是由于循环$n - 1$次后，
+此时若$x_n = 1$，则$x > 1/2$。而操作$x \leftarrow 1 - x$可以表示为对于所有的$i$，$x_i \leftarrow 1 - x_i$，这是由于循环$n - 1$次后，
 \begin{align*}
   1 - x ={}& \left(2^{-1} + 2^{-2} + 2^{-3} + 2^{-4} + \cdots\right)\cdot1 \\
   &- \left(2^{-1}x_n + 2^{-2}x_{n + 1} + 2^{-3}x_{n + 2} + \cdots\right) \\
@@ -37,7 +37,7 @@
 
 若在第$n$次掷硬币前均掷出反面，且该次数为奇数，则则第$n - 1$次掷硬币后，硬币在乙手中，且$x_i = 1 - X_i$。于是，只有$1 - X_n = x_n = 0$，即$X_n = 1$时，乙才能在第$n$次掷硬币前拥有硬币。
 
-因此，若且唯若$X_n = 1$且已掷出$n - 1$个反面时，乙才能在第$n$次掷硬币前拥有硬币。掷出$n - 1$个反面的概率为$\sfrac1{2^{n - 1}} = 2^{1 - n}$，故乙能在第$n$次掷硬币前拥有硬币的概率为$2^{1 - n}X_n$。而第$n$次掷出正面的概率为$\sfrac12 = 2^{-1}$，故乙恰在掷$n$次硬币后获得1元的概率为$2^nX_n$。考虑所有的$n$，可知乙最终获得1元的概率为
+因此，若且唯若$X_n = 1$且已掷出$n - 1$个反面时，乙才能在第$n$次掷硬币前拥有硬币。掷出$n - 1$个反面的概率为$1/\left(2^{n - 1}\right) = 2^{1 - n}$，故乙能在第$n$次掷硬币前拥有硬币的概率为$2^{1 - n}X_n$。而第$n$次掷出正面的概率为$1/2 = 2^{-1}$，故乙恰在掷$n$次硬币后获得1元的概率为$2^nX_n$。考虑所有的$n$，可知乙最终获得1元的概率为
 \[ 2^{-1}X_1 + 2^{-2}X_2 + 2^{-3}X_3 + 2^{-4}X_4 + \dots = x \]
 同时乙有$1 - x$的概率从甲获得0元，故乙平均可以从甲得到
 \[ 1\cdot x + 0\cdot(1 - x) = x \]
