--- a/probs/008A.tex
+++ b/probs/008A.tex
@@ -16,7 +16,7 @@
 \[ E = E_1 \cup E_2 \cup E_3 \cup E_4 \cup \dots \cup E_{c - 1} \cup E_c \]
 考虑到基数为$n$的集合$C$有$C_n^k$个基数为$k$的集合$K$，故$c = C_n^k$。
 
-对于某个$K_i$，考虑在$C$中而不在$K_i$中的某个选手$C_j$，由于比赛结果是随机的，所以$C_j$击败$K_i$中所有选手的概率为$(\sfrac12)^k = 2^{-k}$，故其互补事件“$C_j$未击败$K_i$中所有选手”的概率为$1 - 2^{-k}$。这样的选手$C_j$共$n - k$个，故可知事件$E_i$的概率为
+对于某个$K_i$，考虑在$C$中而不在$K_i$中的某个选手$C_j$，由于比赛结果是随机的，所以$C_j$击败$K_i$中所有选手的概率为$(1/2)^k = 2^{-k}$，故其互补事件“$C_j$未击败$K_i$中所有选手”的概率为$1 - 2^{-k}$。这样的选手$C_j$共$n - k$个，故可知事件$E_i$的概率为
 \[ P(E_i) = \left(1 - 2^{-k}\right)^{n - k} \]
 于是
 \begin{align*}
