--- a/probs/0099.tex
+++ b/probs/0099.tex
@@ -8,7 +8,7 @@
 
 \textit{JYH提供的题目。}
 
-\ans{$x = \sfrac{12}7$}
+\ans{$x = 12/7$}
 
 \subsection{换元}
 
@@ -18,6 +18,6 @@
 \[ p + q = 7x = \frac12\left(p^2 - q^2\right) = \frac12(p + q)(p - q) \]
 显然$p + q \ne 0$，故$p - q = 2, p + q = 7x$，于是知
 \[ 2p = 7x + 2 \Rightarrow 4\left(7x^2 + 9x + 13\right) = (7x + 2)^2 \]
-解得$x_1 = \sfrac{12}7, x_2 = -\sfrac43$。
+解得$x_1 = 12/7, x_2 = -4/3$。
 
-经检验，$x_1 = \sfrac{12}7$为原方程的解，$x_2 = -\sfrac43$为增根。故$x = \sfrac{12}7$。
+经检验，$x_1 = 12/7$为原方程的解，$x_2 = -4/3$为增根。故$x = 12/7$。
