--- a/probs/009A.tex
+++ b/probs/009A.tex
@@ -8,7 +8,7 @@
 
 \textit{JYH提供的题目。}
 
-\ans{$x = -\sfrac53$或$x = -\sfrac23$}
+\ans{$x = -5/3$或$x = -2/3$}
 
 \subsection{换元}
 
@@ -18,8 +18,8 @@
 \[ pq(p + q)^2 = 18, p - q = 1 \]
 于是
 \[ pq(4pq + 1) = 18 \]
-解关于$pq$的二次方程，得$pq = 2$或$pq = -\sfrac94$。
+解关于$pq$的二次方程，得$pq = 2$或$pq = -9/4$。
 
-若$pq = 2$，则$p = -1, q = -2$或$p = 2, q = 1$，此时$x = -\sfrac53$或$x = -\sfrac23$；若$pq = -\sfrac94$，此时不存在实数$p, q$满足方程组。
+若$pq = 2$，则$p = -1, q = -2$或$p = 2, q = 1$，此时$x = -5/3$或$x = -2/3$；若$pq = -9/4$，此时不存在实数$p, q$满足方程组。
 
-综上，$x = -\sfrac53$或$x = -\sfrac23$。
+综上，$x = -5/3$或$x = -2/3$。
