--- a/probs/009B.tex
+++ b/probs/009B.tex
@@ -12,7 +12,7 @@
 
 \textit{JYH提供的题目。}
 
-\ans{$x = y = z = 0$或$x = y = z = \sfrac12$}
+\ans{$x = y = z = 0$或$x = y = z = 1/2$}
 
 \subsection{倒数}
 
@@ -24,6 +24,6 @@
 \[ \frac1{x^2} + \frac1{y^2} + \frac1{z^2} - 4\left(\frac1x + \frac1y + \frac1z\right) + 12 = 0 \]
 配方，得
 \[ \left(\frac1x - 2\right)^2 + \left(\frac1y - 2\right)^2 + \left(\frac1z - 2\right)^2 = 0 \]
-因此$x = y = z = \sfrac12$。
+因此$x = y = z = 1/2$。
 
-综上，$x = y = z = 0$或$x = y = z = \sfrac12$。
+综上，$x = y = z = 0$或$x = y = z = 1/2$。
