--- a/probs/009C.tex
+++ b/probs/009C.tex
@@ -16,6 +16,6 @@
 \[ \left(x + \frac{3x}{x - 3}\right)^2 = \frac{6x^2}{x - 3} + 16 \]
 左侧括号内通分，得
 \[ \left(\frac{x^2}{x - 3}\right)^2 = 6\frac{x^2}{x - 3} + 16 \]
-解关于$\sfrac{x^2}{x - 3}$的二次方程，得
+解关于$x^2/(x - 3)$的二次方程，得
 \[ \frac{x^2}{x - 3} = 8 \text{或} \frac{x^2}{x - 3} = -2 \]
 解两者，得$x = -1 \pm \sqrt7$。
