--- a/probs/009D.tex
+++ b/probs/009D.tex
@@ -95,4 +95,4 @@
 
 不妨设$\angle BAC = 2\alpha$，则易知$\angle ABC = 90^\circ - \alpha, \angle ABP = 120^\circ - 2\alpha$。同时，由$\angle ADB = 60^\circ$知$\angle BAP = 30^\circ + \alpha$，于是有$\angle BPA = 30^\circ + \alpha = \angle BAP$。由于$A, B, D, E$四点共圆，由圆周角定理知$\angle BAD = \angle BED$，于是有$\angle DEP = \angle DPE \Rightarrow DE = DP$。而$DC = 5, AP = 3$，故$DP = 5 \Rightarrow AD = 5 + 3 = 8$。
 
-由于$AQ \perp BC, \angle ADQ = 60^\circ$，故$DQ = \sfrac12AD = 4 \Rightarrow CQ = 4 + 5 = 9$。而$\triangle ABC$是等腰三角形，由三线合一知$BQ = CQ = 9 \Rightarrow BD = 4 + 9 = 13$。
+由于$AQ \perp BC, \angle ADQ = 60^\circ$，故$DQ = AD/2 = 4 \Rightarrow CQ = 4 + 5 = 9$。而$\triangle ABC$是等腰三角形，由三线合一知$BQ = CQ = 9 \Rightarrow BD = 4 + 9 = 13$。
