--- a/probs/00A5.tex
+++ b/probs/00A5.tex
@@ -13,6 +13,6 @@
 \[ u(x)v'(x) = \left(u(x)v(x)\right)' - u'(x)v(x) \]
 对两边求不定积分，得
 \[ \int u(x)v'(x) \dif x = u(x)v(x) - \int u'(x)v(x) \dif x \]
-将$u'(x)$写作$\sfrac{\dif u}{\dif x}$，$v'(x)$写作$\sfrac{\dif v}{\dif x}$，于是上式可简化为
+将$u'(x)$写作$\dif u/\dif x$，$v'(x)$写作$\dif v/\dif x$，于是上式可简化为
 \[ \int u \dif v = uv - \int v \dif u \]
 证毕。
