--- a/probs/00AC.tex
+++ b/probs/00AC.tex
@@ -30,4 +30,4 @@
   ={}& S_{\triangle ACD} - S_{\triangle CDE} \\
   ={}& S_{\triangle BCD} - S_{\triangle CDE} = S_{\triangle CDE}
 \end{align*}
-而显然$S_{\triangle CDE}$的最大值为$\sfrac12CD\cdot CE = 2$，此时$\angle BCD = 90^\circ$。因此，$S_{\triangle ADF} - S_{\triangle CEF}$的最大值为2。
+而显然$S_{\triangle CDE}$的最大值为$CD\cdot CE/2 = 2$，此时$\angle BCD = 90^\circ$。因此，$S_{\triangle ADF} - S_{\triangle CEF}$的最大值为2。
