--- a/probs/00B8.tex
+++ b/probs/00B8.tex
@@ -107,10 +107,11 @@
 
 计算可知
 \begin{align*}
-  P_1 &= -3x_2 + 3x_3 - \sqrt3y_2 - \sqrt3y_3 + 2\sqrt3y_1 \\
-  P_2 &= x_2 + x_3 - 2x_1 - \sqrt3y_2 + \sqrt3y_3 + 2 \\
-  Q_1 &= \sqrt3x_2 + \sqrt3x_3 - 2\sqrt3x_1 - 3y_2 + 3y_3 + 2\sqrt3 \\
-  Q_2 &= \sqrt3x_2 - \sqrt3x_3 + y_2 + y_3 - 2y_1
+  P_1 ={}& -3x_2 + 3x_3 - \sqrt3y_2 - \sqrt3y_3 + 2\sqrt3y_1 \\
+  P_2 ={}& x_2 + x_3 - 2x_1 - \sqrt3y_2 + \sqrt3y_3 + 2 \\
+  Q_1 ={}& \sqrt3x_2 + \sqrt3x_3 \\
+    &- 2\sqrt3x_1 - 3y_2 + 3y_3 + 2\sqrt3 \\
+  Q_2 ={}& \sqrt3x_2 - \sqrt3x_3 + y_2 + y_3 - 2y_1
 \end{align*}
 注意到$Q_1 = \sqrt3P_2, P_1 = -\sqrt3Q_2$，故显然$P_1P_2 + Q_1Q_2 = 0 \Rightarrow M_1M_2 = M_1M_3$。
 
