--- a/probs/00B9.tex
+++ b/probs/00B9.tex
@@ -181,7 +181,7 @@
   \centering
   \begin{tabular}{cccccccc}
     \toprule
-    $S$ & $H$ & $U$ & $\{T, R\}$ & $A$ & $E$ & $k_5$ & $k_6$ \\
+    $S$ & $H$ & $U$ & $\{T, R\}$ & $A$ & $E$ & $k_5$ & $k_6$ \\ \midrule
     5 & 9 & 2 & \multirow{2}*{$\{0, 6\}$} & \multirow{2}*{8} & \multirow{2}*{3} & \multirow{2}*{2} & 6 \\
     7 & 5 & 4 & & & & & 2 \\ \midrule
     \multirow{2}*{6} & \multirow{2}*{7} & \multirow{2}*{3} & \multirow{2}*{$\{2, 4\}$} & 0 & \multirow{2}*{9} & 1 & \multirow{2}*{10} \\
