--- a/probs/0085.tex
+++ b/probs/0085.tex
@@ -37,7 +37,7 @@
 
 由引理~\ref{lemma:0085-aboddeven} 知$a, b$一奇一偶，不妨设$a$为偶数，$b, c$为奇数。与此同时，
 \[ a^2 = c^2 - b^2 = (c + b)(c - b) = 4\cdot\frac{c + b}2\cdot\frac{c - b}2 \]
-设整数$r = \sfrac{c + b}2, s = \sfrac{c - b}2$，于是$r, s$互质。这是由于$r, s$的每个公因数都是$c = r + s$和$b = r - s$的公因数，而由引理~\ref{lemma:0085-abc}，$b, c$互质，故$r, s$互质。而$4rs$是平方数，故$r, s$均为平方数。令$r = p^2, s = q^2$，其中$p, q$是互质的正整数。
+设整数$r = (c + b)/2, s = (c - b)/2$，于是$r, s$互质。这是由于$r, s$的每个公因数都是$c = r + s$和$b = r - s$的公因数，而由引理~\ref{lemma:0085-abc}，$b, c$互质，故$r, s$互质。而$4rs$是平方数，故$r, s$均为平方数。令$r = p^2, s = q^2$，其中$p, q$是互质的正整数。
 
 代入原式，有
 \begin{align*}
