--- a/probs/0088.tex
+++ b/probs/0088.tex
@@ -14,11 +14,11 @@
 
 将左边记为$f(n)$，对$n$进行归纳。
 
-当$n = 1$时，显然有$f(n) = 1 \le 2 - 1 = 1$；当$n > 1$时，假设$f(n - 1) \le 2 - \sfrac1{n - 1}$，即要证明$f(n) \le 2 - \sfrac1n$。注意到
+当$n = 1$时，显然有$f(n) = 1 \le 2 - 1 = 1$；当$n > 1$时，假设$f(n - 1) \le 2 - 1/(n - 1)$，即要证明$f(n) \le 2 - 1/n$。注意到
 \begin{align*}
   f(n) &= f(n - 1) + \frac1{n^2} \\
   &\le 2 - \frac1{n - 1} + \frac1{n^2} \\
   &\le 2 - \frac1{n - 1} + \frac1{n(n - 1)} \\
   &= 2 - \frac1n
 \end{align*}
-于是有$f(n) \le 2 - \sfrac1n$成立。该命题是原命题更严格的情况，于是原命题得证。
+于是有$f(n) \le 2 - 1/n$成立。该命题是原命题更严格的情况，于是原命题得证。
