--- a/probs/0098.tex
+++ b/probs/0098.tex
@@ -20,7 +20,7 @@
 
 如图~\ref{fig:0098-eqtri}，作线段$AP, BP$的中点$M, N$，连接$DM, DN, EM, FN$。
 
-由直角三角形的性质易知$AM = EM = \sfrac12AP, BN = FN = \sfrac12BP$。同时，$DM, DN$均为$\triangle APB$的中位线，故$DN = \sfrac12AP, DM = \sfrac12BP$且$DN \parallel AP, DM \parallel BP$。于是有$EM = DN, FN = DM$。
+由直角三角形的性质易知$AM = EM = AP/2, BN = FN = BP/2$。同时，$DM, DN$均为$\triangle APB$的中位线，故$DN = AP/2, DM = BP/2$且$DN \parallel AP, DM \parallel BP$。于是有$EM = DN, FN = DM$。
 
 \begin{align*}
   \because{}& \text{在$\triangle DME$与$\triangle FND$中，} \\
