--- a/probs/009F.tex
+++ b/probs/009F.tex
@@ -4,7 +4,7 @@
 若$x, y, z$满足$x + y + z = 1$，求$xy + 2yz + 3zx$的最大值。
 \problabels{yellow/代数, green/最值问题}
 
-\ans{$\sfrac34$}
+\ans{$3/4$}
 
 \subsection{配方}
 
@@ -20,7 +20,7 @@
   \frac34 - P &= \left(x^2 - x + \frac14\right) + 2\left(z^2 - z + \frac14\right) \\
   &= \left(x - \frac12\right)^2 + 2\left(z - \frac12\right)^2
 \end{align*}
-于是当$x = z = \sfrac12$时，$\sfrac34 - P$取得最小值0，故此时$P$取得最大值$\sfrac34$。
+于是当$x = z = 1/2$时，$3/4 - P$取得最小值0，故此时$P$取得最大值$3/4$。
 
 \subsection{Lagrange乘数法}
 
@@ -40,4 +40,4 @@
   z &= \frac12 \\
   \lambda &= -\frac32 \\
 \end{aligned} \right. \]
-代入得最大值为$\sfrac34$。
+代入得最大值为$3/4$。
