--- a/probs/00A4.tex
+++ b/probs/00A4.tex
@@ -28,7 +28,7 @@
   &+ 3\cdot4a_4(x - x_0)^2 + \cdots \\
   &+ (n - 1)na_n(x - x_0)^{n - 2} + \cdots
 \end{align*}
-易知$\sfrac1{2!}f''(x_0) = \sfrac1{1\cdot2}f''(x_0) = a_2$。多次求导可得
+易知$(1/2!)f''(x_0) = (1/(1\cdot2))f''(x_0) = a_2$。多次求导可得
 \begin{align*}
   f(x) &= 0!a_0(x - x_0)^0 + \frac{1!}{1!}a_1(x - x_0)^1 \\
   &+ \dots + \frac{n!}{n!}a_n(x - x_0)^n + \cdots \\
@@ -48,7 +48,7 @@
   \cdots &= \cdots \\
   a_n &= \frac{f^{(n)}(x_0)}{n!}
 \end{align*}
-由此可得$f(x)$的Taylor展开式为\footnote{当函数在$0$处展开，即$x_0 = 0$时，该展开被称为Maclaurin展开，即$f(x) = \sum_{n = 0}^\infty \sfrac{f^{(n)}(0)}{n!}x^n$。}
+由此可得$f(x)$的Taylor展开式为\footnote{当函数在$0$处展开，即$x_0 = 0$时，该展开被称为Maclaurin展开，即$f(x) = \sum_{n = 0}^\infty (f^{(n)}(0)/n!)x^n$。}
 \begin{align*}
   f(x) &= \frac{f(x_0)}{0!}(x - x_0)^0 + \frac{f'(x_0)}{1!}(x - x_0)^1 \\
   &+ \dots + \frac{f^{(n)}(x_0)}{n!}(x - x_0)^n + \cdots \\
