--- a/probs/00AB.tex
+++ b/probs/00AB.tex
@@ -20,6 +20,6 @@
 
 如图~\ref{fig:00AB-sym}，作$O$关于$PQ$的对称点$O'$，连接$OO'$交$PQ$于$M$，连接$O'H, OQ$。显然$O'H \perp AB$，$OO'$与$PQ$互相垂直平分，翻折得的弧$PQ$以$O'$为圆心，圆$O'$与圆$O$全等。易知$OA = OB = OQ = O'H = 4, OH = 1$。
 
-由勾股定理知，$OO' = \sqrt{17}$，故$OM = \sfrac12\sqrt{17}$，而$OQ = 4$，故
+由勾股定理知，$OO' = \sqrt{17}$，故$OM = \sqrt{17}/2$，而$OQ = 4$，故
 \[ MQ = \sqrt{OQ^2 - OM^2} = \frac12\sqrt{47} \]
 故$PQ = 2MQ = \sqrt{47}$。
