--- a/images/0095-ltan-p.tex
+++ b/images/0095-ltan-p.tex
@@ -4,14 +4,13 @@
   \tkzDefPoint(160:1){A}
   \tkzInterLC(A,P)(O,A) \tkzGetFirstPoint{B}
   \tkzDefLine[tangent from=P](O,A) \tkzGetFirstPoint{C}
-  \tkzDrawPoints(O,A,B,C,P)
   \tkzDrawCircle(O,A)
   \tkzDrawSegments(P,A P,O)
   \tkzDrawSegments[dashed](P,C O,C)
-  \tkzLabelPoint[left](O){$O$}
-  \tkzLabelPoint[left](A){$A$}
-  \tkzLabelPoint[above](B){$B$}
-  \tkzLabelPoint[below](C){$C$}
-  \tkzLabelPoint[right](P){$P$}
   \tkzMarkRightAngle(P,C,O)
+  \tkzDrawPoints(O,A,B,C,P)
+  \tkzLabelPoints[left](O,A)
+  \tkzLabelPoints[above](B)
+  \tkzLabelPoints[below](C)
+  \tkzLabelPoints[right](P)
 \end{tikzpicture}
