--- a/images/0093-sit2.tex
+++ b/images/0093-sit2.tex
@@ -11,18 +11,15 @@
     \tkzGetPoint{D'}
   \tkzFillPolygon[color=teal!30](A,O,D)
   \tkzFillPolygon[color=teal!30](A,O,D')
-  \tkzDrawPoints(A,B,C,D,E,O,D')
   \tkzDrawPolygon(A,B,C)
   \tkzDrawSegments(B,D C,E)
   \tkzDrawSegments[dashed](A,O D',O)
-  \tkzLabelPoint[below](A){$A$}
-  \tkzLabelPoint[below](B){$B$}
-  \tkzLabelPoint[above](C){$C$}
-  \tkzLabelPoint[left](D){$D$}
-  \tkzLabelPoint[below](E){$E$}
-  \tkzLabelPoint[above right](O){$O$}
-  \tkzLabelPoint[below](D'){$D'$}
   \tkzMarkSegments[color=teal,mark=|](O,D O,D' O,E)
   \tkzMarkAngle[mkcolor=cyan,mark=||](O,A,D)
   \tkzMarkAngle[mkcolor=cyan,mark=||](E,A,O)
+  \tkzDrawPoints(A,B,C,D,E,O)
+  \tkzLabelPoints[below](A,B,E)
+  \tkzLabelPoints[above](C)
+  \tkzLabelPoints[above right](O)
+  \tkzLabelPoints[left](D)
 \end{tikzpicture}
