--- a/images/0095-ltan.tex
+++ b/images/0095-ltan.tex
@@ -3,11 +3,10 @@
   \tkzDefPoints{0/0/O,3/1/P}
   \tkzDefPoint(160:1){A}
   \tkzInterLC(A,P)(O,A) \tkzGetFirstPoint{B}
-  \tkzDrawPoints(O,A,B,P)
   \tkzDrawCircle(O,A)
   \tkzDrawSegments(P,A P,O)
-  \tkzLabelPoint[left](O){$O$}
-  \tkzLabelPoint[left](A){$A$}
-  \tkzLabelPoint[above](B){$B$}
-  \tkzLabelPoint[right](P){$P$}
+  \tkzDrawPoints(O,A,B,P)
+  \tkzLabelPoints[left](O,A)
+  \tkzLabelPoints[above](B)
+  \tkzLabelPoints[right](P)
 \end{tikzpicture}
