--- a/images/0098.tex
+++ b/images/0098.tex
@@ -7,18 +7,15 @@
   \tkzDefLine[orthogonal=through E](C,A) \tkzGetPoint{e}
   \tkzDefLine[orthogonal=through F](C,B) \tkzGetPoint{f}
   \tkzInterLL(E,e)(F,f) \tkzGetPoint{P}
-  \tkzDrawPoints(A,B,C,D,E,F,P)
   \tkzDrawPolygon(A,B,C)
   \tkzDrawSegments(A,E B,F E,P F,P A,P B,P D,E D,F)
-  \tkzLabelPoint[left](A){$A$}
-  \tkzLabelPoint[above](B){$B$}
-  \tkzLabelPoint[above](C){$C$}
-  \tkzLabelPoint[above](D){$D$}
-  \tkzLabelPoint[left](E){$E$}
-  \tkzLabelPoint[right](F){$F$}
-  \tkzLabelPoint[below](P){$P$}
   \tkzMarkSegments[color=blue,mark=|](A,D B,D)
   \tkzMarkSegments[color=teal,mark=||](D,E D,F)
   \tkzMarkRightAngle(P,E,A)
   \tkzMarkRightAngle(B,F,P)
+  \tkzDrawPoints(A,B,C,D,E,F,P)
+  \tkzLabelPoints[above](B,C,D)
+  \tkzLabelPoints[below](P)
+  \tkzLabelPoints[left](A,E)
+  \tkzLabelPoints[right](F)
 \end{tikzpicture}
