--- a/preamble.tex
+++ b/preamble.tex
@@ -29,7 +29,7 @@
 
 \setmainfont{Times New Roman}
 \setsansfont{Helvetica}
-\setmonofont{Courier New}
+\setmonofont{Andale Mono}
 \setCJKmainfont[
   BoldFont={黑体-简 中等}, ItalicFont={楷体-简},
   BoldItalicFont={宋体-简 黑体}]{宋体-简}
@@ -43,17 +43,17 @@
 \captionsetup{format=hang, font=small, labelfont=bf, labelsep=quad}
 
 \columnsep=3em
-\columnseprule=0.5pt
+\columnseprule=.5pt
 
 \usetikzlibrary{
   angles, quotes, calc, intersections, through, shadows,
   decorations.pathmorphing}
 \tikzset{
-  mark angle/.style n args={3}{
+  mark angle/.style n args={3}{    % deprecated
     draw=#1!50, fill=#1!20,
     angle radius=#2, angle eccentricity=#3,
   },
-  opafill/.style n args={1}{
+  opafill/.style n args={1}{       % deprecated
     fill=#1!50, fill opacity=.5,
   },
 }
@@ -69,7 +69,7 @@
         minimum height=13pt, #1] (label) {
           \footnotesize\textit{\labelname}}; } }
 \newcommand\image[1]{\input{images/#1}}
-\newcommand\mathalignsep{\hspace{13pt}}
+\newcommand\mathalignsep{\hspace{13pt}}  % deprecated
 
 \let\oldcong\cong \let\oldsim\sim
 \renewcommand\cong{\ \reflectbox{$\oldcong$}\ }
@@ -81,9 +81,9 @@
 \newcommand\lcm{\mathrm{lcm}}
 \newcommand\rttri{\mathrm{Rt}\triangle}
 
-\newcommand\calclen[4]{sqrt((#1-#3)^2+(#2-#4)^2)}
-\newcommand\calcdotpos[3]{(#1+#3*(#2-#1))}
-\newcommand\calcbisectorx[6]{\calcdotpos#1#5{
+\newcommand\calclen[4]{sqrt((#1-#3)^2+(#2-#4)^2)} % deprecated
+\newcommand\calcdotpos[3]{(#1+#3*(#2-#1))}        % deprecated
+\newcommand\calcbisectorx[6]{\calcdotpos#1#5{     % deprecated
   \calclen#1#2#3#4/(\calclen#1#2#3#4+\calclen#3#4#5#6)}}
-\newcommand\calcbisectory[6]{\calcdotpos#2#6{
+\newcommand\calcbisectory[6]{\calcdotpos#2#6{     % deprecated
   \calclen#1#2#3#4/(\calclen#1#2#3#4+\calclen#3#4#5#6)}}
