--- a/covers/logo.tex
+++ b/covers/logo.tex
@@ -10,7 +10,7 @@
     \fill[SkyBlue1] (1,-3) -- (-3,0) -- (1,0) -- cycle;
     \fill[LightSkyBlue1] (0,0) |- (1,1) |- cycle;
     \draw[DeepSkyBlue2, line width=9pt, decorate,
-      decoration={random steps, segment length=.5pt, amplitude=.1pt}]
+      decoration={random steps, segment length=5pt, amplitude=.5pt}]
       (-3,0) -- (0,4) -- (4,1) -- (1,-3) -- cycle
       (-3,0) -- (1,0) (0,4) -- (0,0) (4,1) -- (0,1) (1,-3) -- (1,1);
   \end{tikzpicture}
