--- a/probs/000D.tex
+++ b/probs/000D.tex
@@ -26,27 +26,27 @@
 如图~\ref{fig:000D-mid}，延长$PQ$到$P'$使得$PQ = P'Q$，连接$BP'$，与$AD$的延长线交于$A'$。
 
 \begin{align*}
-  &\because   Q\text{是线段}BC\text{的中点} \\
-  &\therefore BQ = CQ \\
-  &\because   \text{在}\triangle CPQ\text{与}\triangle BP'Q\text{中} \\
-  &\mathalignsep \begin{cases}
+  \because  {}& \text{$Q$ 是线段 $BC$ 的中点} \\
+  \therefore{}& BQ = CQ \\
+  \because  {}& \text{在 $\triangle CPQ$ 与 $\triangle BP'Q$ 中} \\
+  & \begin{cases}
     CQ = BQ \\
     \angle CQP = \angle BQP' \\
-    PQ = P'Q \\
+    PQ = P'Q
   \end{cases} \\
-  &\therefore \triangle CPQ \cong \triangle BP'Q \\
-  &\therefore CP = BP', \angle P' = \angle CPP' \\
-  &\therefore AC \parallel BP' \\
-  &\therefore \angle A'AC = \angle AA'B \\
-  &\because   AD\text{平分}\angle BAC \\
-  &\therefore \angle A'AC = \angle A'AB \\
-  &\therefore \angle A'AB = \angle AA'B \\
-  &\therefore AB = A'B \\
+  \therefore{}& \triangle CPQ \cong \triangle BP'Q \\
+  \therefore{}& CP = BP', \angle P' = \angle CPP' \\
+  \therefore{}& AC \parallel BP' \\
+  \therefore{}& \angle A'AC = \angle AA'B \\
+  \because  {}& AD\text{平分}\angle BAC \\
+  \therefore{}& \angle A'AC = \angle A'AB \\
+  \therefore{}& \angle A'AB = \angle AA'B \\
+  \therefore{}& AB = A'B \\
   \text{又}&\because AA' \parallel PP', AC \parallel BP' \\
-  &\therefore \text{四边形}A'APP'\text{为平行四边形} \\
-  &\therefore AP = A'P' \\
-  &\because   A'B + A'P' = BP' \\
-  &\therefore AB + AP = CP \\
+  \therefore{}& \text{四边形 $A'APP'$ 为平行四边形} \\
+  \therefore{}& AP = A'P' \\
+  \because  {}& A'B + A'P' = BP' \\
+  \therefore{}& AB + AP = CP \\
 \end{align*}
 
 综上，$AB$、$AP$与$CP$的数量关系为$AB + AP = CP$。
