--- a/probs/000E.tex
+++ b/probs/000E.tex
@@ -26,23 +26,23 @@
 如图~\ref{fig:000E-fold}，延长$CA$到$B'$，使得$AB = AB'$；连接$B'D$。
 
 \begin{align*}
-  &\because   2\angle CAD + \angle BAC = 180^\circ \\
-  &\therefore 180^\circ - \angle CAD = \angle CAD + \angle BAC \\
-  &\because   \angle CAD + \angle B'AD = 180^\circ \\
-  &\therefore \angle BAD = \angle B'AD \\
-  &\therefore \triangle ABD \cong \triangle AB'D \ \text{（证明省略）} \\
-  &\therefore BD = B'D, \angle B' = \angle ABD \\
-  &\because   BD = CD \\
-  &\therefore B'D = CD, \angle BCD = \angle CBD \\
-  &\therefore \angle B'CD = \angle B' \\
-  &\therefore \angle ABD = \angle B'CD, \\
-  &\mathalignsep \angle ACB = \angle BCD - \angle B'CD = \angle CBD - \angle ABD \\
-  &\therefore \angle ABD = 45^\circ \\
-  &\because   \angle ABD + \angle CBD + \angle ACB + \angle BAC = 180^\circ \\
-  &\therefore \angle ABD + \angle CBD \\& + \angle CBD - \angle ABD + \angle BAC = 180^\circ \\
-  &\therefore 2\angle CBD + \angle BAC = 180^\circ \\
-  &\because   2\angle CAD + \angle BAC = 180^\circ \\
-  &\therefore \angle CAD = \angle CBD \\
+  \because  {}& 2\angle CAD + \angle BAC = 180^\circ \\
+  \therefore{}& 180^\circ - \angle CAD = \angle CAD + \angle BAC \\
+  \because  {}& \angle CAD + \angle B'AD = 180^\circ \\
+  \therefore{}& \angle BAD = \angle B'AD \\
+  \therefore{}& \triangle ABD \cong \triangle AB'D \ \text{（证明省略）} \\
+  \therefore{}& BD = B'D, \angle B' = \angle ABD \\
+  \because  {}& BD = CD \\
+  \therefore{}& B'D = CD, \angle BCD = \angle CBD \\
+  \therefore{}& \angle B'CD = \angle B' \\
+  \therefore{}& \angle ABD = \angle B'CD, \\
+  & \angle ACB = \angle BCD - \angle B'CD = \angle CBD - \angle ABD \\
+  \therefore{}& \angle ABD = 45^\circ \\
+  \because  {}& \angle ABD + \angle CBD + \angle ACB + \angle BAC = 180^\circ \\
+  \therefore{}& \angle ABD + \angle CBD \\& + \angle CBD - \angle ABD + \angle BAC = 180^\circ \\
+  \therefore{}& 2\angle CBD + \angle BAC = 180^\circ \\
+  \because  {}& 2\angle CAD + \angle BAC = 180^\circ \\
+  \therefore{}& \angle CAD = \angle CBD \\
 \end{align*}
 
 综上，$\angle CAD = \angle CBD$。\footnote{得到$\angle ABD = \angle B'CD$后，也可用三角形相似证明。设$AC$与$BD$交于$P$，则$\triangle ABP \sim \triangle DCP$，然后证明$\triangle ADP \sim \triangle BCP$也可得到$\angle CAD = \angle CBD$。}
