--- a/probs/0028.tex
+++ b/probs/0028.tex
@@ -24,11 +24,11 @@
 如图~\ref{fig:0028-sim}，连接$AD$、$BC$。
 
 \begin{align*}
-  &\because   \text{据圆周角定理\footnotemark 得，}\angle PAD = \angle PCB, \\
-  &\mathalignsep \angle APD = \angle CPB \\
-  &\therefore \triangle APD \sim \triangle CPB \\
-  &\therefore PA:PD = PC:PB \\
-  &\therefore PA\cdot PB = PC\cdot PD \\
+  \because  {}& \text{据圆周角定理\footnotemark 得，}\angle PAD = \angle PCB, \\
+  & \angle APD = \angle CPB \\
+  \therefore{}& \triangle APD \sim \triangle CPB \\
+  \therefore{}& PA:PD = PC:PB \\
+  \therefore{}& PA\cdot PB = PC\cdot PD \\
 \end{align*}
 
 \footnotetext{圆周角定理的证明参见第~\ref{sec:0025} 题。}
