--- a/probs/001B.tex
+++ b/probs/001B.tex
@@ -28,53 +28,53 @@
 如图~\ref{fig:001B-eqtri}，以$PC$为边向左作等边$\triangle PCM'$，连接$MC$、$M'N$。
 
 \begin{align*}
-  &\because   \angle MNB = \angle AMP \\
-  &\therefore \angle MNB + 60^\circ = \angle AMP + 60^\circ \\
-  &\because   \triangle ABC\ \text{是等边三角形} \\
-  &\therefore \angle ABN = 60^\circ \\
-  &\therefore \angle MNB + \angle ABN = \angle AMP + 60^\circ \\
-  &\because   \angle MNB + \angle ABN = \angle AMN \\
-  &\therefore \angle AMN = \angle AMP + 60^\circ \\
-  &\therefore \angle AMP + \angle PMN = \angle AMP + 60^\circ \\
-  &\therefore \angle PMN = 60^\circ \\
-  &\because   PM = MN \\
-  &\therefore \triangle PMN\ \text{是等边三角形} \\
-  &\therefore PM = PN = MN, \angle MPN = 60^\circ \\
-  &\because   \triangle PCM'\ \text{是等边三角形} \\
-  &\therefore PC = PM' = M'C, \angle M'PC = \angle M'CP = 60^\circ \\
-  &\therefore \angle MPN = \angle M'PC \\
-  &\therefore \angle M'PN = \angle CPM \\
-  &\because   \text{在}\triangle M'PN\text{与}\triangle CPM\text{中} \\
-  &\mathalignsep \begin{cases}
+  \because  {}& \angle MNB = \angle AMP \\
+  \therefore{}& \angle MNB + 60^\circ = \angle AMP + 60^\circ \\
+  \because  {}& \triangle ABC\ \text{是等边三角形} \\
+  \therefore{}& \angle ABN = 60^\circ \\
+  \therefore{}& \angle MNB + \angle ABN = \angle AMP + 60^\circ \\
+  \because  {}& \angle MNB + \angle ABN = \angle AMN \\
+  \therefore{}& \angle AMN = \angle AMP + 60^\circ \\
+  \therefore{}& \angle AMP + \angle PMN = \angle AMP + 60^\circ \\
+  \therefore{}& \angle PMN = 60^\circ \\
+  \because  {}& PM = MN \\
+  \therefore{}& \triangle PMN\ \text{是等边三角形} \\
+  \therefore{}& PM = PN = MN, \angle MPN = 60^\circ \\
+  \because  {}& \triangle PCM'\ \text{是等边三角形} \\
+  \therefore{}& PC = PM' = M'C, \angle M'PC = \angle M'CP = 60^\circ \\
+  \therefore{}& \angle MPN = \angle M'PC \\
+  \therefore{}& \angle M'PN = \angle CPM \\
+  \because  {}& \text{在 $\triangle M'PN$ 与 $\triangle CPM$ 中} \\
+  & \begin{cases}
     M'P = CP \\
     \angle M'PN = \angle CPM \\
     PN = PM \\
   \end{cases} \\
-  &\therefore \triangle M'PN \cong \triangle CPM \\
-  &\therefore M'N = MC, \angle PNM' = \angle PMC \\
-  &\because   MC\text{是等边}\triangle ABC\text{的中线} \\
-  &\therefore \angle AMC = 90^\circ, \angle BCM = 30^\circ \\
-  &\therefore \angle PMC = 90^\circ - \angle AMP, \\
-  &\mathalignsep \angle MCN = 180^\circ - 30^\circ = 150^\circ \\
-  &\therefore \angle PNM' = 90^\circ - \angle AMP \\
-  &\because   \angle M'CP = 60^\circ \\
-  &\therefore \angle M'NC \\
+  \therefore{}& \triangle M'PN \cong \triangle CPM \\
+  \therefore{}& M'N = MC, \angle PNM' = \angle PMC \\
+  \because  {}& MC\text{是等边}\triangle ABC\text{的中线} \\
+  \therefore{}& \angle AMC = 90^\circ, \angle BCM = 30^\circ \\
+  \therefore{}& \angle PMC = 90^\circ - \angle AMP, \\
+  & \angle MCN = 180^\circ - 30^\circ = 150^\circ \\
+  \therefore{}& \angle PNM' = 90^\circ - \angle AMP \\
+  \because  {}& \angle M'CP = 60^\circ \\
+  \therefore{}& \angle M'NC \\
   &= \angle PNM' + 60^\circ + \angle MNB \\
   &= 90^\circ - \angle AMP + 60^\circ + \angle MNB \\
   &= 150^\circ + (\angle MNB - \angle AMP) \\
-  &\because   \angle MNB = \angle AMP \\
-  &\therefore \angle MNB - \angle AMP = 0^\circ \\
-  &\therefore \angle M'NC = 150^\circ \\
-  &\therefore \angle M'NC = \angle MCN \\
-  &\because   \text{在}\triangle M'NC\text{与}\triangle MCN\text{中} \\
-  &\mathalignsep \begin{cases}
+  \because  {}& \angle MNB = \angle AMP \\
+  \therefore{}& \angle MNB - \angle AMP = 0^\circ \\
+  \therefore{}& \angle M'NC = 150^\circ \\
+  \therefore{}& \angle M'NC = \angle MCN \\
+  \because  {}& \text{在 $\triangle M'NC$ 与 $\triangle MCN$ 中} \\
+  & \begin{cases}
     M'N = MC \\
     \angle M'NC = \angle MCN \\
     NC = CN \\
   \end{cases} \\
-  &\therefore \triangle M'NC \cong \triangle MCN \\
-  &\therefore M'C = MN \\
-  &\therefore PN = PC \\
+  \therefore{}& \triangle M'NC \cong \triangle MCN \\
+  \therefore{}& M'C = MN \\
+  \therefore{}& PN = PC \\
 \end{align*}
 
 综上，线段$PN$与$PC$的数量关系为$PN = PC$。\footnotemark
@@ -92,20 +92,20 @@
 如图~\ref{fig:001B-dec}，以$C$为原点，直线$CB$为$x$轴建立平面直角坐标系$xCy$。不妨设$B(4,0)$、$N(2d,0)$。
 
 \begin{align*}
-  &\because   \triangle PMN\ \text{是等边三角形} \\
-  &\mathalignsep \text{（证明参见\nameref{subsec:001B-eqtri}）} \\
-  &\therefore \angle PNM = 60^\circ, PN = MN \\
-  \text{又} &\because B(4,0), C(0,0) \\
-  &\therefore A(\cos60^\circ\cdot4, \sin60^\circ\cdot4) \\
-  &\therefore A(2,2\sqrt3) \\
-  &\because   M\text{是线段}AB\text{的中点} \\
-  &\therefore M(3,\sqrt3) \\
-  &\because   P\text{由}M\text{绕点}N\text{顺时针旋转}60^\circ\text{得到} \\
-  &\therefore x_P = (x_M - x_N)\cos60^\circ \\
+  \because  {}& \triangle PMN\ \text{是等边三角形} \\
+  & \text{（证明参见\nameref{subsec:001B-eqtri}）} \\
+  \therefore{}& \angle PNM = 60^\circ, PN = MN \\
+  \text{又} \because{}& B(4,0), C(0,0) \\
+  \therefore{}& A(\cos60^\circ\cdot4, \sin60^\circ\cdot4) \\
+  \therefore{}& A(2,2\sqrt3) \\
+  \because  {}& M\text{是线段}AB\text{的中点} \\
+  \therefore{}& M(3,\sqrt3) \\
+  \because  {}& P\text{由}M\text{绕点}N\text{顺时针旋转}60^\circ\text{得到} \\
+  \therefore{}& x_P = (x_M - x_N)\cos60^\circ \\
   &- (y_M - y_N)\sin60^\circ + x_N = d \\
-  &\therefore P\text{在直线}x = d\text{上} \\
-  &\because   \text{直线}x = d\text{是线段}NC\text{的中垂线} \\
-  &\therefore PN = PC \\
+  \therefore{}& P\text{在直线}x = d\text{上} \\
+  \because  {}& \text{直线}x = d\text{是线段}NC\text{的中垂线} \\
+  \therefore{}& PN = PC \\
 \end{align*}
 
 综上，线段$PN$与$PC$的数量关系为$PN = PC$。
